// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSortFilter.vue sort=closeness_order&friends=two_or_more_friends 1`] = `
"<div class=\\"example-modal-window\\">
  <div class=\\"event_header_sort_filter\\">開催が近い順 × Friends 2+</div>
  <transition-stub name=\\"modal\\" appear=\\"true\\">
    <div class=\\"modal modal-overlay\\">
      <div class=\\"modal-window\\">
        <div class=\\"modal-window-content\\">
          <div class=\\"event-modal-container\\">
            <form action=\\"/events\\" method=\\"GET\\" id=\\"js-sort-filter-form\\">
              <div class=\\"event-modal-sort\\">
                <div class=\\"event-modal-label\\">Sort by</div>
                <div class=\\"event-modal-value\\"><select name=\\"sort\\">
                    <option value=\\"friends_number_order\\">Friend数</option>
                    <option value=\\"recent_order\\">新着順</option>
                    <option value=\\"created_order\\">投稿順</option>
                    <option value=\\"closeness_order\\">開催が近い順</option>
                  </select></div>
              </div>
              <div class=\\"event-modal-center\\">
                <div class=\\"event-modal-label\\"></div>
                <div class=\\"event-modal-value\\">×</div>
              </div>
              <div class=\\"event-modal-filter\\">
                <div class=\\"event-modal-label\\">Filter by</div>
                <div class=\\"event-modal-value\\"><select name=\\"time\\" style=\\"display: none;\\">
                    <option value=\\"past_8_hours\\">過去8時間</option>
                    <option value=\\"past_24_hours\\">過去24時間</option>
                    <option value=\\"past_2_days\\">過去2日</option>
                    <option value=\\"past_3_days\\">過去3日</option>
                    <option value=\\"past_4_days\\">過去4日</option>
                    <option value=\\"past_5_days\\">過去5日</option>
                    <option value=\\"past_6_days\\">過去6日</option>
                    <option value=\\"past_1_weeks\\">過去1週間</option>
                    <option value=\\"past_all\\">All</option>
                  </select><select name=\\"friends\\">
                    <option value=\\"one_or_more_friends\\">Friends 1+</option>
                    <option value=\\"two_or_more_friends\\">Friends 2+</option>
                    <option value=\\"three_or_more_friends\\">Friends 3+</option>
                    <option value=\\"four_or_more_friends\\">Friends 4+</option>
                    <option value=\\"five_or_more_friends\\">Friends 5+</option>
                  </select></div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`EventSortFilter.vue sort=created_order&friends=two_or_more_friends 1`] = `
"<div class=\\"example-modal-window\\">
  <div class=\\"event_header_sort_filter\\">投稿順 × Friends 2+</div>
  <transition-stub name=\\"modal\\" appear=\\"true\\">
    <div class=\\"modal modal-overlay\\">
      <div class=\\"modal-window\\">
        <div class=\\"modal-window-content\\">
          <div class=\\"event-modal-container\\">
            <form action=\\"/events\\" method=\\"GET\\" id=\\"js-sort-filter-form\\">
              <div class=\\"event-modal-sort\\">
                <div class=\\"event-modal-label\\">Sort by</div>
                <div class=\\"event-modal-value\\"><select name=\\"sort\\">
                    <option value=\\"friends_number_order\\">Friend数</option>
                    <option value=\\"recent_order\\">新着順</option>
                    <option value=\\"created_order\\">投稿順</option>
                    <option value=\\"closeness_order\\">開催が近い順</option>
                  </select></div>
              </div>
              <div class=\\"event-modal-center\\">
                <div class=\\"event-modal-label\\"></div>
                <div class=\\"event-modal-value\\">×</div>
              </div>
              <div class=\\"event-modal-filter\\">
                <div class=\\"event-modal-label\\">Filter by</div>
                <div class=\\"event-modal-value\\"><select name=\\"time\\" style=\\"display: none;\\">
                    <option value=\\"past_8_hours\\">過去8時間</option>
                    <option value=\\"past_24_hours\\">過去24時間</option>
                    <option value=\\"past_2_days\\">過去2日</option>
                    <option value=\\"past_3_days\\">過去3日</option>
                    <option value=\\"past_4_days\\">過去4日</option>
                    <option value=\\"past_5_days\\">過去5日</option>
                    <option value=\\"past_6_days\\">過去6日</option>
                    <option value=\\"past_1_weeks\\">過去1週間</option>
                    <option value=\\"past_all\\">All</option>
                  </select><select name=\\"friends\\">
                    <option value=\\"one_or_more_friends\\">Friends 1+</option>
                    <option value=\\"two_or_more_friends\\">Friends 2+</option>
                    <option value=\\"three_or_more_friends\\">Friends 3+</option>
                    <option value=\\"four_or_more_friends\\">Friends 4+</option>
                    <option value=\\"five_or_more_friends\\">Friends 5+</option>
                  </select></div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`EventSortFilter.vue sort=friends_number_order&time=past_8_hours 1`] = `
"<div class=\\"example-modal-window\\">
  <div class=\\"event_header_sort_filter\\"></div>
  <transition-stub name=\\"modal\\" appear=\\"true\\">
    <div class=\\"modal modal-overlay\\">
      <div class=\\"modal-window\\">
        <div class=\\"modal-window-content\\">
          <div class=\\"event-modal-container\\">
            <form action=\\"/events\\" method=\\"GET\\" id=\\"js-sort-filter-form\\">
              <div class=\\"event-modal-sort\\">
                <div class=\\"event-modal-label\\">Sort by</div>
                <div class=\\"event-modal-value\\"><select name=\\"sort\\">
                    <option value=\\"friends_number_order\\">Friend数</option>
                    <option value=\\"recent_order\\">新着順</option>
                    <option value=\\"created_order\\">投稿順</option>
                    <option value=\\"closeness_order\\">開催が近い順</option>
                  </select></div>
              </div>
              <div class=\\"event-modal-center\\">
                <div class=\\"event-modal-label\\"></div>
                <div class=\\"event-modal-value\\">×</div>
              </div>
              <div class=\\"event-modal-filter\\">
                <div class=\\"event-modal-label\\">Filter by</div>
                <div class=\\"event-modal-value\\"><select name=\\"time\\">
                    <option value=\\"past_8_hours\\">過去8時間</option>
                    <option value=\\"past_24_hours\\">過去24時間</option>
                    <option value=\\"past_2_days\\">過去2日</option>
                    <option value=\\"past_3_days\\">過去3日</option>
                    <option value=\\"past_4_days\\">過去4日</option>
                    <option value=\\"past_5_days\\">過去5日</option>
                    <option value=\\"past_6_days\\">過去6日</option>
                    <option value=\\"past_1_weeks\\">過去1週間</option>
                    <option value=\\"past_all\\">All</option>
                  </select><select name=\\"friends\\" style=\\"display: none;\\">
                    <option value=\\"one_or_more_friends\\">Friends 1+</option>
                    <option value=\\"two_or_more_friends\\">Friends 2+</option>
                    <option value=\\"three_or_more_friends\\">Friends 3+</option>
                    <option value=\\"four_or_more_friends\\">Friends 4+</option>
                    <option value=\\"five_or_more_friends\\">Friends 5+</option>
                  </select></div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`EventSortFilter.vue sort=friends_number_order&time=past_24_hours 1`] = `
"<div class=\\"example-modal-window\\">
  <div class=\\"event_header_sort_filter\\"></div>
  <transition-stub name=\\"modal\\" appear=\\"true\\">
    <div class=\\"modal modal-overlay\\">
      <div class=\\"modal-window\\">
        <div class=\\"modal-window-content\\">
          <div class=\\"event-modal-container\\">
            <form action=\\"/events\\" method=\\"GET\\" id=\\"js-sort-filter-form\\">
              <div class=\\"event-modal-sort\\">
                <div class=\\"event-modal-label\\">Sort by</div>
                <div class=\\"event-modal-value\\"><select name=\\"sort\\">
                    <option value=\\"friends_number_order\\">Friend数</option>
                    <option value=\\"recent_order\\">新着順</option>
                    <option value=\\"created_order\\">投稿順</option>
                    <option value=\\"closeness_order\\">開催が近い順</option>
                  </select></div>
              </div>
              <div class=\\"event-modal-center\\">
                <div class=\\"event-modal-label\\"></div>
                <div class=\\"event-modal-value\\">×</div>
              </div>
              <div class=\\"event-modal-filter\\">
                <div class=\\"event-modal-label\\">Filter by</div>
                <div class=\\"event-modal-value\\"><select name=\\"time\\">
                    <option value=\\"past_8_hours\\">過去8時間</option>
                    <option value=\\"past_24_hours\\">過去24時間</option>
                    <option value=\\"past_2_days\\">過去2日</option>
                    <option value=\\"past_3_days\\">過去3日</option>
                    <option value=\\"past_4_days\\">過去4日</option>
                    <option value=\\"past_5_days\\">過去5日</option>
                    <option value=\\"past_6_days\\">過去6日</option>
                    <option value=\\"past_1_weeks\\">過去1週間</option>
                    <option value=\\"past_all\\">All</option>
                  </select><select name=\\"friends\\" style=\\"display: none;\\">
                    <option value=\\"one_or_more_friends\\">Friends 1+</option>
                    <option value=\\"two_or_more_friends\\">Friends 2+</option>
                    <option value=\\"three_or_more_friends\\">Friends 3+</option>
                    <option value=\\"four_or_more_friends\\">Friends 4+</option>
                    <option value=\\"five_or_more_friends\\">Friends 5+</option>
                  </select></div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`EventSortFilter.vue sort=recent_order&friends=one_or_more_friends 1`] = `
"<div class=\\"example-modal-window\\">
  <div class=\\"event_header_sort_filter\\">新着順 × Friends 1+</div>
  <transition-stub name=\\"modal\\" appear=\\"true\\">
    <div class=\\"modal modal-overlay\\">
      <div class=\\"modal-window\\">
        <div class=\\"modal-window-content\\">
          <div class=\\"event-modal-container\\">
            <form action=\\"/events\\" method=\\"GET\\" id=\\"js-sort-filter-form\\">
              <div class=\\"event-modal-sort\\">
                <div class=\\"event-modal-label\\">Sort by</div>
                <div class=\\"event-modal-value\\"><select name=\\"sort\\">
                    <option value=\\"friends_number_order\\">Friend数</option>
                    <option value=\\"recent_order\\">新着順</option>
                    <option value=\\"created_order\\">投稿順</option>
                    <option value=\\"closeness_order\\">開催が近い順</option>
                  </select></div>
              </div>
              <div class=\\"event-modal-center\\">
                <div class=\\"event-modal-label\\"></div>
                <div class=\\"event-modal-value\\">×</div>
              </div>
              <div class=\\"event-modal-filter\\">
                <div class=\\"event-modal-label\\">Filter by</div>
                <div class=\\"event-modal-value\\"><select name=\\"time\\" style=\\"display: none;\\">
                    <option value=\\"past_8_hours\\">過去8時間</option>
                    <option value=\\"past_24_hours\\">過去24時間</option>
                    <option value=\\"past_2_days\\">過去2日</option>
                    <option value=\\"past_3_days\\">過去3日</option>
                    <option value=\\"past_4_days\\">過去4日</option>
                    <option value=\\"past_5_days\\">過去5日</option>
                    <option value=\\"past_6_days\\">過去6日</option>
                    <option value=\\"past_1_weeks\\">過去1週間</option>
                    <option value=\\"past_all\\">All</option>
                  </select><select name=\\"friends\\">
                    <option value=\\"one_or_more_friends\\">Friends 1+</option>
                    <option value=\\"two_or_more_friends\\">Friends 2+</option>
                    <option value=\\"three_or_more_friends\\">Friends 3+</option>
                    <option value=\\"four_or_more_friends\\">Friends 4+</option>
                    <option value=\\"five_or_more_friends\\">Friends 5+</option>
                  </select></div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;
